frontend folder created

--- a/webPage.html
+++ b/webPage.html
@@ -13,7 +13,7 @@
     <!-- Add JavaScript here -->
     <script>
         // This will log to the browser's console
-        console.log("The page is loaded and working");
+        console.log("The page is loaded and working!");
     </script>
 </body>
 
